# runtypes

./: CMakeLists.txt  README.md
example/: add_vs_emplace.cpp  api.cpp  basic.cpp  custom_struct.cpp  main.cpp
examples/: basic.cpp
include/runtypes/: CType.hpp  Data.hpp  Exception.hpp  Struct.hpp  Type.hpp  TypeRef.hpp  runtypes.hpp
test/: unitary.cpp
